Fixed z-index bug affecting main nav.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -253,6 +253,7 @@ ul {
 .section--hello {
   position: relative;
   width: 100%;
+  z-index: 0;
 }
 .section--hello:after {
   content: '';
